fixed issue with iframe overflow on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -62,6 +62,7 @@
   width: 100%;
   top: 10%;
   z-index: 2;
+  overflow: hidden;
 }
 
 html, body {
